# Hotel-Inventory-Booking-System

./: .gitignore  README.md  blog.md  docker-compose.yml  otel-collector-config.yaml  otel-dashboard.json
.cursor/rules/: best-practice.mdc  fastapi-doc.mdc  sample-fastapi-app.mdc  tech-stack.mdc
.github/workflows/: ci.yml
Helm-charts/booking-service/: Chart.yaml  values.yaml
Helm-charts/booking-service/templates/: deployment.yaml
Helm-charts/inventory-service/: values-dev.yaml  values.yaml
Helm-charts/inventory-service/templates/: deployment.yaml  service.yaml
argocd/: README.md  app-booking.yaml  app-inventory.yaml  app-project.yaml
argocd/otel-collector/: otel-collector-app.yaml  values.yaml
booking_service/: Dockerfile  README.md  pyproject.toml
booking_service/app/: main.py  monitoring.py  schemas.py
booking_service/app/api/: booking.py
booking_service/app/db/: connection.py  models.py
gateway/: Dockerfile  main.py  pyproject.toml
helm-charts/: README.md  values.yaml
helm-charts/booking-service/: .helmignore  values-dev.yaml  values-prod.yaml  values.yaml
helm-charts/booking-service/templates/: NOTES.txt  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm-charts/inventory-service/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm-charts/inventory-service/templates/: deployment.yaml
helm-charts/otel-collector/: README.md  values.yaml
inventory_service/: .dockerignore  Dockerfile  README.md  pyproject.toml
inventory_service/app/: main.py  monitoring.py  sample_data.py  schemas.py
inventory_service/app/api/: inventory.py
inventory_service/app/db/: connection.py  models.py
inventory_service/app/service/: __init__.py
ml_pipeline/: README.md  deploy_all.sh  deploy_endpoint.py  iam_setup.json  inference.py  lambda_pricing.py  launch_training.py  launch_training_builtin.py  pyproject.toml  requirements.txt  setup_s3.py  test_pipeline.py  train.py
terraform/: .gitignore  README.md
terraform/envs/prod/: backend.tf  main.tf  outputs.tf  variables.tf
terraform/global/: providers.tf  variables.tf  versions.tf
terraform/modules/alb/: main.tf
terraform/modules/api_gateway/: main.tf
terraform/modules/dynamodb/: main.tf
terraform/modules/eks/: main.tf
terraform/modules/iam/: main.tf
training_data/: README.md  main.py  pyproject.toml
(+8 files in other folders)
